cka-sample-exam/config-map.yaml

apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
spec:
  containers:
    - name: demo-pod
      image: alpine
      command: ["sleep", "3600"]
