cka-sample-exam/dns.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busy33
  name: busy33
spec:
  containers:
  - image: busybox
    name: busy33
    command: ["sh", "-c", "while true; do echo hello; sleep 5; done"]
