cka-sample-exam/job.yaml

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: xxazz-pod
  name: xxazz-pod
  namespace: run-once
spec:
  containers:
  - image: alpine
    name: xxazz-pod
    command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Never # Equivalent to Job as Pod Name must match
