cka-sample-exam/my-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-pod-1
  name: my-pod-1
  namespace: mynamespace
spec:
  containers:
  - image: alpine:latest
    name: my-pod-1
    command: ['sh', '-c', 'sleep 3600' ]
  dnsPolicy: ClusterFirst
  restartPolicy: OnFailure
