cka-sample-exam/network-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: my-busy
  name: my-busy
  namespace: secure
spec:
  containers:
  - image: busybox
    name: my-busy
    command: ["sh", "-c", "while true; do echo hello; sleep 5; done"]
