cka-sample-exam/storage-lab.yaml

apiVersion: v1
kind: Pod
metadata:
  name: my-pod-storage
  namespace: myvol
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/var/www/html"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: my-claim
